<resources>
    <string name="app_name">SematecHolyForm</string>
    <string name="profile">Profile</string>
    <string name="dial">Dial</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_family">Please enter your family</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_age">Please enter your age</string>
    <string name="review">review</string>
    <string name="name">Name</string>
    <string name="family">Family</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
</resources>
