<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReviewActivity">
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_your_name"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp" />
    <EditText
        android:id="@+id/edtFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_your_family"
        android:layout_marginBottom="16dp"/>
    <EditText
        android:id="@+id/edtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_your_email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>
    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_your_age"
        android:inputType="number"
        android:maxLength="2"/>
    <Button
        android:textColor="@color/colorPurple"
        android:id="@+id/btnReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/review"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>