<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RepresentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingLeft="8dp"/>
        <TextView
            android:id="@+id/txtShowName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.4"
            android:paddingRight="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/family"
            android:paddingLeft="8dp"/>
        <TextView
            android:id="@+id/txtFamily"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.4"
            android:paddingRight="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/email"
            android:paddingLeft="8dp"/>
        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.4"
            android:paddingRight="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:textSize="16sp"
            android:text="@string/age"
            android:textStyle="bold"
            android:paddingLeft="8dp"/>
        <TextView
            android:id="@+id/txtAge"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.4"
            android:paddingRight="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPurple"
            android:text="@string/ok"/>
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPurple"
            android:layout_weight="1"
            android:text="@string/edit"/>
    </LinearLayout>

</LinearLayout>